--- a/Galen-Kate/sass/_module.sass
+++ b/Galen-Kate/sass/_module.sass
@@ -3,7 +3,8 @@
   padding-bottom: 1.5em
   text-transform: uppercase
   font-size: 1.25em
-  color: $color7
+  color: $darker-color6
+
 
 /* nav */
 
@@ -32,6 +33,7 @@
     line-height: 1.5em
     max-width: 38em
     margin: auto
+
 
 /* feature */
 
@@ -73,7 +75,7 @@
 /* profile section */
 
 .profile
-  color: $color7
+  color: $darker-color6
   figcaption
     margin-top: 0.1875em
     line-height: 1.5em
@@ -81,6 +83,7 @@
   img
     margin: 0 auto
     max-width: 12.5em
+
 
 /*footer*/
 
@@ -92,6 +95,7 @@
   p
     &:first-of-type
       padding-top: 0.8em
+
 
 /*Vector Images*/
 
@@ -134,7 +138,7 @@
 
 .color2
   background-color: $color2
-  color: $color7
+  color: $darker-color6
 
 .color3
   background-color: $color3
